--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@
 #incorrectPassword {
   color: red;
 }
+body {
+  background-color: Crimson;
+}
 #visaIMG {
   height: 19px;
   width: 50px;
@@ -28,4 +31,42 @@
 img {
   width: 250px;
   height: 250px;
+}
+
+@font-face {
+  font-family: sportsFont;
+  src: url('SFSportsNight.ttf');
+}
+
+@font-face {
+  font-family: sportsFont2;
+  src: url('TeamSpiritNF.ttf');
+}
+
+h1 {
+  font-family: sportsFont;
+  font-size: 50px;
+  background-color: Azure;
+  color: black;
+}
+
+#logo {
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin: 0;
+}
+.welcome {
+  font-family: sportsFont;
+  font-size: 30px;
+}
+
+.homeButtons {
+  background-color: black;
+  color: white;
+  font-family: sportsFont;
+  font-size: 15px;
+  padding: 10px;
+  margin-top: 5px;
+  border-radius: 20px;
 }
