--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,30 @@ img {
   width: 250px;
   height: 250px;
 }
+
+body{
+  margin: 0;
+}
+.item {
+  min-width: 20%;
+  float: left;
+  margin-bottom: 20px;
+  margin-right: 2.5%;
+  margin-left: 2.5%;
+}
+
+#footer{
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 50px;
+  background-color: lightgreen;
+  text-align: center;
+  /*clear: both;*/
+}
+
+.header{
+  padding: 1px;
+  background-color: #5cd65c;
+}
